--- a/HW3/hw3.html
+++ b/HW3/hw3.html
@@ -44,9 +44,9 @@ p{
 <h2 id=title></h2>
 <p id=clock></p>
 
-<p><b>#COMPLETE THE PUZZLE</b></p>
+<p><b>#COMPLETE THE PUZZLE</b></p>    <p> 
 <font size="3">(4 parça halinde hatalı olan görsellerin üzerine tıklayarak tamamlayınız.)</font>
-    <p>   
+  
  <div class="row">
  <div class="column">
 <img src="cog4.png" id="cog4"class="row"onClick="this.animate(t2, 700000)"  width="150" height="150"> 
