--- a/HW3/hw3.html
+++ b/HW3/hw3.html
@@ -45,7 +45,7 @@ p{
 <p id=clock></p>
 
 <p><b>#COMPLETE THE PUZZLE</b></p>    <p> 
-<font size="3">(Hatalı olan görsellerin üzerine tıklayınız.)</font><
+<font size="3">(Hatalı olan görsellerin üzerine tıklayınız.)</font>
   
  <div class="row">
  <div class="column">
@@ -65,7 +65,7 @@ p{
 <p><b>#CAR DRIVER</b></p> 
    <button onClick="speed();">FAST </button>
    <button onClick="speed2();">SLOW</button><br><br>
-<img src="car3.png" id ="car"  align="left" width="265" height="105"><br><hr>
+<img src="car3.png" id ="car"  align="left" width="265" height="105"><br><br><br><br><br><br><hr>
 <p><b>#BOUNCING BALL</b></p>
 <img src="ball.png" onload ="this.animate(t1, t1Option)"  width="75" height="75"><br><br><br><br><br><br><br><br><br><br><br><hr>
 <h2 style="width:200px;" id="status"></h2>
