--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body {
     <tbody>
         <tr>
             <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW7/cw7.html">CW7</a></td>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW7/cw7.html">HW4</a></td>
+			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index.html">HW4</a></td>
         </tr></tr>
     </thead>
     <tbody>
@@ -135,7 +135,7 @@ body {
     </tbody>
     <tbody>
         <tr>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/">MyRepo</a></td>
+			<td>https://github.com/ibrahimyyildirim/advancedProgramming<a href="">MyRepo</a></td>
         </tr>
     </tbody>
 
