--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@ body {
 
 
 <script>
-
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('sw.js')
+          .then((reg) => { console.log('SW Registered', reg) })
+          .catch(console.log)
+      }
 </script>
 
 </style>
