--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body {
     </thead>
         <tbody>
         <tr>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/">Github</a></td>
+			<td><a href="https://github.com/ibrahimyyildirim">Github</a></td>
         </tr>
     </tbody>
     <tbody>
