--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Ibrahim Yıldırım, 2018" />
+    <meta name="description" content="JS Repo" />
+    <link rel="icon" sizes="350x350" href="js.png">
+    <link rel="manifest" href="manifest.json"> 
 	
 	
 <script>
