--- a/CW9/cw9.html
+++ b/CW9/cw9.html
@@ -20,8 +20,8 @@
 <h2>Using Canvas</h2>
 For color <input type="color"  id="color1" onchange="draw()" value="#a67779">
 for line size: <input type="number" style="height:18px;width:45px" id="line" value= "3"onchange="draw()" >
-for width: <input type="number" style="height:18px;width:45px" id="width" value= "50"onchange="draw()" step = "10">
-for height: <input type="number" style="height:18px;width:45px" id="height" value= "50"onchange="draw()"step = "10">
+for X: <input type="number" style="height:18px;width:45px" id="width" value= "50"onchange="draw()" step = "10">
+for Y: <input type="number" style="height:18px;width:45px" id="height" value= "50"onchange="draw()"step = "10">
 <br><br><br>
 
 
