--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@ body {
     border: solid 2px rgba(15, 117, 235, 0.63);
     color: rgb(55, 118, 190);
     padding: 10px;
-    text-align: left;
+    text-align: center;
     text-shadow: 1px 1px 1px #fff;
+	width:200px;
+	 
 }
 .zui-table tbody td {
     border: solid 2px rgba(15, 117, 235, 0.63);
@@ -72,6 +74,7 @@ body {
     padding: 10px;
     text-align: center;
     text-shadow: 1px 1px 1px #fff;
+	
 }
 
 </style>
@@ -92,42 +95,43 @@ body {
     </thead>
 	    <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW9/cw9.html">CW9</a></td>			
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW9/cw9.html"><b>CW9</b> - Using Canvas</a></td>	
+				<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index.html"><b>HW4</b> - PWA (MyHomepage)</a></td>		
         </tr></tr>
     </thead
     <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW7/cw7.html">CW7</a></td>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index.html">HW4</a></td>
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW7/cw7.html"><b>CW7</b> - PWA and DOM</a></td>
+			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW3/hw3.html"><b>HW3</b> - Animations</a></td>
         </tr></tr>
     </thead>
     <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW6/timing.html">CW6</a></td>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW3/hw3.html">HW3</a></td>
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW6/timing.html"><b>CW6</b> - Timing (Map vs. Array)</a></td>
+			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW2/index.html"><b>HW2 </b>- Student Database</a></td>
         </tr></tr>
     </thead>
     <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW5/cw5.html">CW5</a></td>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW2/index.html">HW2</a></td>
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW5/cw5.html"><b>CW5</b> - Fetch and FileReader</a></td>
+			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW1%20-%20Add%20Course.html"><b>HW1</b> - Course Data</a></td>
         </tr></tr>
     </thead>
     <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index2.html">CW4</a></td>
-			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW1%20-%20Add%20Course.html">HW1</a></td>
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index2.html"><b>CW4</b> - Inspector</a></td>
         </tr></tr>
     </thead>
     <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/inspector.html">CW3</a></td>
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/inspector.html"><b>CW3</b> - Objects and Arrays</a></td>
         </tr>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/IbrahimYildirim_arrayDemo.html">CW2</a></td>
+            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/IbrahimYildirim_arrayDemo.html"><b>CW2</b> - Array Methods
+</a></td>
         </tr>
     </tbody>
 
