--- a/index.html
+++ b/index.html
@@ -77,15 +77,39 @@ body {
 	
 }
 
+#homework2 {
+
+
+    padding: 10px;
+    text-align: center;
+    text-shadow: 1px 1px 1px #fff;
+	width:422px;
+}
+
 </style>
+<div align=center>
 <div class="header" id="myHeader">
   <h2>Advanced Programming - 2018 </h2>
 </div>
 
 <br>
 
+<table class="zui-table">
+    <thead>
+        <tr>
+            <th>Project</th>
 
+			</tr>
+    </thead>
+        <tbody>
+        <tr>
+            <td id="homework2"><a href="https://ibrahimyyildirim.github.io/advancedProgramming/Project/index.html">Movie Ticket Booking System</a></td>
+        </tr>
+    </tbody>
 
+        </table>
+</html>
+<br>
 <table class="zui-table">
     <thead>
         <tr>
@@ -93,19 +117,20 @@ body {
 			 <th>HomeWorks</th>
 			</tr>
     </thead>
-	    <tbody>
+    <tbody >
         <tr>
-            <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW9/cw9.html"><b>CW9</b> - Using Canvas</a></td>	
-				<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index.html"><b>HW4</b> - PWA (MyHomepage)</a></td>		
+            <td ><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW9/cw9.html"><b>CW9</b> - Using Canvas</a></td>	
+				<td ><a href="https://ibrahimyyildirim.github.io/advancedProgramming/index.html"><b>HW4</b> - PWA (MyHomepage)</a></td>		
         </tr></tr>
-    </thead
+    </thead>
     <tbody>
+	    
         <tr>
             <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW7/cw7.html"><b>CW7</b> - PWA and DOM</a></td>
 			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW3/hw3.html"><b>HW3</b> - Animations</a></td>
         </tr></tr>
     </thead>
-    <tbody>
+    </tbody>
         <tr>
             <td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/CW6/timing.html"><b>CW6</b> - Timing (Map vs. Array)</a></td>
 			<td><a href="https://ibrahimyyildirim.github.io/advancedProgramming/HW2/index.html"><b>HW2 </b>- Student Database</a></td>
@@ -147,7 +172,7 @@ body {
     </thead>
         <tbody>
         <tr>
-			<td><a href="https://github.com/ibrahimyyildirim">Github</a></td>
+			<td id="homework2"><a href="https://github.com/ibrahimyyildirim">Github</a></td>
         </tr>
     </tbody>
     <tbody>
@@ -168,7 +193,7 @@ body {
     </thead>
         <tbody>
         <tr>
-            <td><a href="https://www.w3schools.com/">w3schools.com</a></td>
+            <td id="homework2"><a href="https://www.w3schools.com/">w3schools.com</a></td>
         </tr>
         <tbody>
         <tr>
@@ -185,4 +210,5 @@ body {
     </tbody>
 
         </table>
+    </div>
 </html>
