--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {
 </style>
 <div align=center>
 <div class="header" id="myHeader">
-  <h2>Advanced Programming - 2018 </h2>
+  <h2>Advanced Programming  2018 </h2>
 </div>
 
 <br>
