--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Times, Helvetica, sans-serif;
 }
 
 .top-container {
@@ -33,63 +33,54 @@ body {
 }
 
 .header {
-  padding: 10px 16px;
-  background: rgba(15, 117, 235, 0.63);
+  padding: 1px 1px;
+  background: #233656;
   color: #f1f1f1;
+  font: normal 17px  Times , sans-serif;
+  letter-spacing: 4px;
 }
 
-.content {
-  padding: 16px;
+a {
+  color: #233656;
+  text-decoration: none;
 }
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 102px;
-}
-
 .zui-table {
-    border: solid 1px #DDEEEE;
+    border: solid 1px  #233656;
     border-collapse: collapse;
     border-spacing: 0;
-    font: normal 15px Arial, sans-serif;
+    font: normal 16px  Times, sans-serif;
+    
 }
 .zui-table thead th {
-    background-color: #DDEFEF;
-    border: solid 2px rgba(15, 117, 235, 0.63);
-    color: rgb(55, 118, 190);
+    background-color: #415B76;
+    border: solid 2px #233656;
+    color: #EEF4F2;
     padding: 10px;
     text-align: center;
-    text-shadow: 1px 1px 1px #fff;
 	width:200px;
 	 
 }
 .zui-table tbody td {
-    border: solid 2px rgba(15, 117, 235, 0.63);
+    border: solid 2px #233656;
     color: #333;
     padding: 10px;
     text-align: center;
     text-shadow: 1px 1px 1px #fff;
-	
+	background-color: #F9FFFD;
 }
 
 #homework2 {
-
-
     padding: 10px;
     text-align: center;
     text-shadow: 1px 1px 1px #fff;
-	width:422px;
+	width:424px;
 }
 
 </style>
 <div align=center>
 <div class="header" id="myHeader">
-  <h2>Advanced Programming  2018 </h2>
+  <h2>Advanced Programming 2018 </h2><br>
+  
 </div>
 
 <br>
@@ -103,13 +94,13 @@ body {
     </thead>
         <tbody>
         <tr>
-            <td id="homework2"><a href="https://ibrahimyyildirim.github.io/advancedProgramming/Project/index.html">Movie Ticket Booking System</a></td>
+            <td id="homework2"><b><a href="https://ibrahimyyildirim.github.io/advancedProgramming/Project/index.html">Movie Ticket Booking System</a></b></td>
         </tr>
     </tbody>
 
         </table>
 </html>
-<br><br>
+<br>
 <table class="zui-table">
     <thead>
         <tr>
@@ -159,9 +150,6 @@ body {
 </a></td>
         </tr>
     </tbody>
-
-
-
 </table>
 <br><br>
 <table class="zui-table">
@@ -180,9 +168,7 @@ body {
 			<td><a href="https://github.com/ibrahimyyildirim/advancedProgramming">MyRepo</a></td>
         </tr>
     </tbody>
-
         </table>
-
         <br><br>
 <table class="zui-table">
     <thead>
@@ -211,4 +197,5 @@ body {
 
         </table>
     </div>
+    
 </html>
