--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Ibrahim Yıldırım, 2018" />
-    <meta name="description" content="JS Repo" />
+    <meta name="description" content="JS,CSS,HTML5,HTML" />
     <link rel="icon" sizes="350x350" href="js.png">
     <link rel="manifest" href="manifest.json"> 
+    <title>İbrahim Yıldırım - Repo</title>
+    <meta name="theme-color" content="black"/>
 	
 	
 <script>
