--- a/Project/index.html
+++ b/Project/index.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="seat.css">
   <link rel="stylesheet" href="buton.css">
- <!--<link rel="stylesheet" href="buyScreen.css">-->
  <link rel="stylesheet" href="formScreen.css">
 </head>
-<div  class="appBackground">
+<div>
 <body onload="db.kontrol();satilanBilet();"><br>   
 <div align="center"> <b> Filmler </b> 
     <select onchange="temizle();db.kontrol();temizle2();satilanBilet();" required="" id="movie1">
