--- a/Project/index.html
+++ b/Project/index.html
@@ -33,7 +33,7 @@
     </select>
 </div>
 <div class="seatSelection col-lg-12">
-    <p><img src="screen.png" id="cog2" align="center"></p>
+   <!-- <p><img src="screen.png" id="cog2" align="center"></p> -->
     <div class="seatsChart col-lg-6">
         <div class="seatRow">
             <div class="seatRowNumber">
