--- a/Project/index.html
+++ b/Project/index.html
@@ -268,7 +268,7 @@ function openMessage(){
 x = window.innerWidth;
 y = window.innerHeight;
     if(y>x){
-alert("Kullandığınız cihazın ekran ölçülerine göre yatay kullanmanız önerilir.");
+alert("Cihazınızın mevcut ekran ölçülerine göre yatay kullanmanız önerilir.");
 }
 console.log("genişlik:"+x+"yükseklik:"+y)
 }
