--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a {
     </thead>
         <tbody>
         <tr>
-            <td id="homework2"><b><a href="https://ibrahimyyildirim.github.io/advancedProgramming/Project/index.html">Movie Ticket Booking System</a></b></td>
+            <td id="homework2"><b><a href="https://ibrahimyyildirim.github.io/advancedProgramming/Project/index.html">Ticket Booking System</a></b></td>
         </tr>
     </tbody>
 
